Quorum3/Library/Tests/Inheritance/Pass/CastB.quorum
class CastB is CastA
    action Main
        
    end
end