Quorum3/Library/Tests/Inheritance/Fail/CircularInheritance.quorum
class Main is D 
    action Main
        
    end
end